--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
   width: 600px;
-  margin: auto;
-  margin-left: 50px auto;
+  /* margin-left: 50px auto;
   margin-right: 50px auto;
   margin-top: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 10px; 
+  ^ unnessesary code, does the same thing as the line below */
+  margin: 10px auto;
   padding-left: 50px;
   padding-right: 50px;
   padding-top: 10px;
